examples/errors/parsing/let_annotated-trailing-semi.cn
fun f : Int -> Int [pure] = {
  n ->
  let x : Int = n + 1;
}

main : () [impure] = ()
